<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeTab"
        android:enabled="true"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/newDeckTab"
        android:enabled="true"
        android:icon="@drawable/ic_nav_new_deck"
        android:title="@string/tab_new_deck" />

    <item
        android:id="@+id/addCardTab"
        android:enabled="true"
        android:icon="@drawable/ic_nav_add_card"
        android:title="@string/tab_add_card" />

    <item
        android:id="@+id/studyTab"
        android:enabled="true"
        android:icon="@drawable/ic_nav_study"
        android:title="@string/tab_study" />

    <item
        android:id="@+id/calendarTab"
        android:enabled="true"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/tab_calendar" />

</menu>
